--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "lucide-react": "^0.555.0",
     "next": "14.2.24",
     "react": "^18",
     "react-dom": "^18",
